Enhanced travis configuration to test Ruby 1.8.7, 1.9.2, 1.9.3 with Rails 3.0, 3.1, 3.2 and edge

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,12 @@
 language: ruby
+
 rvm:
+  - 1.8.7
   - 1.9.2
   - 1.9.3
+
+gemfile:
+  - .travis/gemfiles/rails_3.0
+  - .travis/gemfiles/rails_3.1
+  - .travis/gemfiles/rails_3.2
+  - .travis/gemfiles/rails_edge
